--- a/index.html
+++ b/index.html
@@ -17,27 +17,16 @@
       <fieldset>Values for Multiplication Table</fieldset>
         <label for="minCol">Minimum Column Value:</label>
         <input type="number" id="minCol" name="minCol" value = 0><br>
-        <div id = "minColSlider" class = "slider"></div>
         <label for="maxCol">Maximum Column Value:</label>
         <input type="number" id="maxCol" name="maxCol" value = 0><br>
-        <div id = "maxColSlider" class = "slider"></div>
         <label for="minRow">Minimum Row Value:</label>
         <input type="number" id="minRow" name="minRow" value = 0><br>
-        <div id = "minRowSlider" class = "slider"></div>
         <label for="maxRow">Maximum Row Value:</label>
         <input type="number" id="maxRow" name="maxRow" value = 0><br>
-        <div id = "maxRowSlider" class = "slider"></div>
-        <input id="addTab" type="button" value="Make Tab"/>
-        <button class="closeTabs" type="button" id="deleteSelected">Delete Selected</button>
+        <button id="submit" type="submit">Submit</button>
         <p id = "inputError"></p>
       </form>
       <div id="table"></div>
-      <div id="tabs">
-        <ul>
-          <li>
-
-          </li>
-        </ul>
       </div>
       
       <script src="js/script.js"></script>
